--- a/app/assets/stylesheets/podcasts.css.scss
+++ b/app/assets/stylesheets/podcasts.css.scss
@@ -1,5 +1,3 @@
-@import 'colors';
-
 #podcasts {
 	padding: 0 0 3em 0;
 	ul {
@@ -299,7 +297,7 @@
 			li {
 				display: inline;
 				margin: 0 1em 0 0;
-				font-weight: 500;
+				font-weight: 700;
 				font-size: .9em;
 				a {
 					color: $dark;
@@ -311,8 +309,6 @@
 			}
 			.current {
 					color: $mainone;
-					font-weight: 700;
-					font-size: 1em;
 				}
 		}
 	}	
